# PyNumDiff

./: .gitignore  README.md  pyproject.toml
pynumdiff/utils/: simulate.py
